# motion

motion_manager/: CMakeLists.txt  package.xml
motion_manager/src/: motion_manager_node.cpp  motion_manager_node.hpp  pub_test.cpp  pub_test.hpp  pub_test_old.cpp
nao_robocup_interfaces/: CMakeLists.txt  package.xml
nao_robocup_interfaces/msg/: ExeTransition.msg  MotionID.msg
